--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -41,9 +41,7 @@ const formattedDate = new Date(date).toLocaleDateString("en-us", {
     <FontAwesome />
   </head>
 
-  <body
-    class="min-h-screen max-w-3xl mx-auto px-6 sm:px-8"
-  >
+  <body class="min-h-screen max-w-3xl mx-auto px-6 sm:px-8">
     <!-- <Header /> -->
     <main id="main">
       <section class="blog-post prose max-w-none prose-sleek">
@@ -60,7 +58,7 @@ const formattedDate = new Date(date).toLocaleDateString("en-us", {
           "header"
           "main"
           "footer";
-        grid-template-rows: 2rem minmax(0, 1fr) 5rem;
+        grid-template-rows: 3rem minmax(0, 1fr) 5rem;
         grid-template-columns: minmax(0, 1fr);
       }
       main {
