--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ const sortedProjects = projects
 ---
 
 <PageLayout>
-  <PageMeta title={`${SITE_TITLE} | Web Ninja`} slot="meta" />
+  <PageMeta title={`Hello, I'm ${SITE_TITLE}`} slot="meta" />
   <Fragment slot="main">
     <Intro />
     <section>
