--- a/src/components/DarkModeToggle.astro
+++ b/src/components/DarkModeToggle.astro
@@ -3,24 +3,24 @@
 
 <mode-toggle class="flex">
   <button
-  class="justify-self-end bg-neutral-200 dark:bg-neutral-700 ml-4 inline-flex h-6 w-11 items-center rounded-full"
-  id="mode-toggle"
-  role="switch"
-  type="button"
-  tabindex="0"
-  aria-checked="false"
-  data-headlessui-state=""
-  ><span class="sr-only">Toggle dark mode</span><span
-    id="mode-circle"
-    class="light inline-block h-4 w-4 rounded-full bg-gradient-to-tr invisible"
-    ><span
-      class="absolute top-0 right-0 w-[10px] h-[10px] rounded-full bg-gray-700 scale-[0]"
-    ></span>
-  </span>
-</button>
+    class="justify-self-end bg-neutral-200 dark:bg-neutral-700 ml-4 inline-flex h-6 w-11 items-center rounded-full"
+    id="mode-toggle"
+    role="switch"
+    type="button"
+    tabindex="0"
+    aria-checked="false"
+    data-headlessui-state=""
+    ><span class="sr-only">Toggle dark mode</span><span
+      id="mode-circle"
+      class="light inline-block h-4 w-4 rounded-full bg-gradient-to-tr invisible"
+      ><span
+        class="absolute top-0 right-0 w-[10px] h-[10px] rounded-full bg-gray-700 scale-[0]"
+      ></span>
+    </span>
+  </button>
 </mode-toggle>
 
-<script>
+<!-- <script>
   function updateHTMLTheme(mode: "light" | "dark") {
     const themeColorMetaTag = document.head.querySelector(
       'meta[name="theme-color"]'
@@ -97,23 +97,15 @@
   }
 
   customElements.define("mode-toggle", ModeToggle);
-</script>
+</script> -->
 
 <style>
   .light {
     transform: translateX(0.25rem);
-    background-image: linear-gradient(
-      to top right,
-      #f97316,
-      #f97316
-    );
+    background-image: linear-gradient(to top right, #f97316, #f97316);
   }
-  .dark {
+  /* .dark {
     transform: translateX(1.5rem);
-    background-image: linear-gradient(
-      to top right,
-      #facc15,
-      #facc15
-    );
-  }
+    background-image: linear-gradient(to top right, #facc15, #facc15);
+  } */
 </style>
