Removed check user preference for dark mode

--- a/src/layouts/ThemeScript.astro
+++ b/src/layouts/ThemeScript.astro
@@ -4,7 +4,7 @@
 */
 ---
 
-<script is:inline>
+<!-- <script is:inline>
   // figure out user's preferred theme and set it as html class for tailwind before paint
   (function () {
     if (typeof window !== "undefined") {
@@ -24,4 +24,4 @@
       }
     }
   })();
-</script>
+</script> -->
