--- a/src/components/CodePenEmbed.astro
+++ b/src/components/CodePenEmbed.astro
@@ -10,7 +10,7 @@ const { url, title } = Astro.props;
 <p
   class="codepen"
   data-height="300"
-  data-default-tab="html,result"
+  data-default-tab="html"
   data-slug-hash="eYJqjgq"
   data-user="ruphaa"
   style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"
