Removed link in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,14 +3,15 @@
 
 <footer class="text-sm leading-[1.75] mt-4">
   <div>
-    Building 12 communities in 12 months. Follow me
+    Building 12 communities in 12 months.
+    <!-- Follow me
     <a
       class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#f57111] to-[#f79605] hover:after:bg-gradient-to-r hover:after:from-[#f57111] hover:after:to-[#f79605]"
       href={"https://twitter.com/seantanyurong"}
       target="_blank"
     >
       @seantanyurong</a
-    >
+    > -->
   </div>
 </footer>
 
