--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,15 +3,13 @@
 
 <footer class="text-sm leading-[1.75] mt-4">
   <div>
-    Building 12 communities in 12 months.
-    <!-- Follow me
     <a
       class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#f57111] to-[#f79605] hover:after:bg-gradient-to-r hover:after:from-[#f57111] hover:after:to-[#f79605]"
-      href={"https://twitter.com/seantanyurong"}
+      href={"https://drive.google.com/file/d/1hoXWBoQNiWV5EajMBOFeqMvYHuOUf_H4/view?usp=sharing"}
       target="_blank"
     >
-      @seantanyurong</a
-    > -->
+      Resume.</a
+    >
   </div>
 </footer>
 
