--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,87 +1,77 @@
 ---
-import { readAll } from "../lib/markdoc/read";
-import { blog } from "../lib/markdoc/frontmatter.schema";
-import { project } from "../lib/markdoc/frontmatter.schema";
-import { community } from "../lib/markdoc/frontmatter.schema";
-import PageMeta from "../components/PageMeta.astro";
-import PageLayout from "../layouts/PageLayout.astro";
-import Intro from "../components/Intro.astro";
-import AboutTheTheme from "../components/AboutTheTheme.astro";
-import { SITE_TITLE } from "../config";
+import { readAll } from '../lib/markdoc/read';
+import { blog } from '../lib/markdoc/frontmatter.schema';
+import { project } from '../lib/markdoc/frontmatter.schema';
+import { community } from '../lib/markdoc/frontmatter.schema';
+import { goal } from '../lib/markdoc/frontmatter.schema';
+import PageMeta from '../components/PageMeta.astro';
+import PageLayout from '../layouts/PageLayout.astro';
+import Intro from '../components/Intro.astro';
+import AboutTheTheme from '../components/AboutTheTheme.astro';
+import { SITE_TITLE } from '../config';
 
 const posts = await readAll({
-  directory: "blog",
+  directory: 'blog',
   frontmatterSchema: blog,
 });
 
 const sortedPosts = posts
   .filter((p) => p.frontmatter.draft !== true)
-  .sort(
-    (a, b) =>
-      new Date(b.frontmatter.date).valueOf() -
-      new Date(a.frontmatter.date).valueOf()
-  );
+  .sort((a, b) => new Date(b.frontmatter.date).valueOf() - new Date(a.frontmatter.date).valueOf());
 
 const projects = await readAll({
-  directory: "projects",
+  directory: 'projects',
   frontmatterSchema: project,
 });
 
 const sortedProjects = projects
   .filter((p) => p.frontmatter.draft !== true)
-  .sort(
-    (a, b) =>
-      new Date(b.frontmatter.date).valueOf() -
-      new Date(a.frontmatter.date).valueOf()
-  );
+  .sort((a, b) => new Date(b.frontmatter.date).valueOf() - new Date(a.frontmatter.date).valueOf());
 
 const communities = await readAll({
-  directory: "communities",
+  directory: 'communities',
   frontmatterSchema: community,
 });
 
 const sortedCommunities = communities
   .filter((p) => p.frontmatter.draft !== true)
-  .sort(
-    (a, b) =>
-      new Date(b.frontmatter.date).valueOf() -
-      new Date(a.frontmatter.date).valueOf()
-  );
+  .sort((a, b) => new Date(b.frontmatter.date).valueOf() - new Date(a.frontmatter.date).valueOf());
+
+const goals = await readAll({
+  directory: 'goals',
+  frontmatterSchema: goal,
+});
+
+const sortedGoals = goals
+  .filter((p) => p.frontmatter.draft !== true)
+  .sort((a, b) => new Date(b.frontmatter.date).valueOf() - new Date(a.frontmatter.date).valueOf());
 ---
 
 <PageLayout>
-  <PageMeta title={`Hello, I'm ${SITE_TITLE}`} slot="meta" />
-  <Fragment slot="main">
+  <PageMeta title={`Hello, I'm ${SITE_TITLE}`} slot='meta' />
+  <Fragment slot='main'>
     <Intro />
     <section>
       <ul>
         {
           sortedCommunities.map((community) => {
-            const formattedDate = new Date(
-              community.frontmatter.date
-            ).toLocaleDateString("en-us", {
-              year: "numeric",
-              month: "short",
-              day: "numeric",
+            const formattedDate = new Date(community.frontmatter.date).toLocaleDateString('en-us', {
+              year: 'numeric',
+              month: 'short',
+              day: 'numeric',
             });
             return (
-              <li class="grid grid-cols-[1fr] md:grid-cols-[1fr_auto] mb-3 md:gap-2 items-start">
-                <div class="title">
-                  <a
-                    href={community.frontmatter.url}
-                    target="_blank"
-                    class="unset hover:text-text-link"
-                  >
+              <li class='grid grid-cols-[1fr] md:grid-cols-[1fr_auto] mb-3 md:gap-2 items-start'>
+                <div class='title'>
+                  <a href={community.frontmatter.url} target='_blank' class='unset hover:text-text-link'>
                     <span>{community.frontmatter.title}</span>
                     <span>
-                      <i class="ml-1 mr-1 text-[12px] pb-2 fa-solid fa-up-right-from-square" />
+                      <i class='ml-1 mr-1 text-[12px] pb-2 fa-solid fa-up-right-from-square' />
                     </span>
                   </a>
                 </div>
-                <div class="text-text-muted text-sm italic pt-1">
-                  <time datetime={community.frontmatter.date.toISOString()}>
-                    {formattedDate}
-                  </time>
+                <div class='text-text-muted text-sm italic pt-1'>
+                  <time datetime={community.frontmatter.date.toISOString()}>{formattedDate}</time>
                 </div>
               </li>
             );
@@ -89,35 +79,27 @@ const sortedCommunities = communities
         }
       </ul>
     </section>
-    <section class="mt-14">
+    <section class='mt-14'>
       <ul>
         {
           sortedProjects.map((project) => {
-            const formattedDate = new Date(
-              project.frontmatter.date
-            ).toLocaleDateString("en-us", {
-              year: "numeric",
-              month: "short",
-              day: "numeric",
+            const formattedDate = new Date(project.frontmatter.date).toLocaleDateString('en-us', {
+              year: 'numeric',
+              month: 'short',
+              day: 'numeric',
             });
             return (
-              <li class="grid grid-cols-[1fr] md:grid-cols-[1fr_auto] mb-3 md:gap-2 items-start">
-                <div class="title">
-                  <a
-                    href={project.frontmatter.url}
-                    target="_blank"
-                    class="unset hover:text-text-link"
-                  >
+              <li class='grid grid-cols-[1fr] md:grid-cols-[1fr_auto] mb-3 md:gap-2 items-start'>
+                <div class='title'>
+                  <a href={project.frontmatter.url} target='_blank' class='unset hover:text-text-link'>
                     <span>{project.frontmatter.title}</span>
                     <span>
-                      <i class="ml-1 mr-1 text-[12px] pb-2 fa-solid fa-up-right-from-square" />
+                      <i class='ml-1 mr-1 text-[12px] pb-2 fa-solid fa-up-right-from-square' />
                     </span>
                   </a>
                 </div>
-                <div class="text-text-muted text-sm italic pt-1">
-                  <time datetime={project.frontmatter.date.toISOString()}>
-                    {formattedDate}
-                  </time>
+                <div class='text-text-muted text-sm italic pt-1'>
+                  <time datetime={project.frontmatter.date.toISOString()}>{formattedDate}</time>
                 </div>
               </li>
             );
@@ -125,50 +107,62 @@ const sortedCommunities = communities
         }
       </ul>
     </section>
-    <section class="mt-14">
+    <section class='mt-14'>
+      <ul>
+        {
+          sortedGoals.map((goal) => {
+            // const formattedDate = new Date(goal.frontmatter.date).toLocaleDateString('en-us', {
+            //   year: 'numeric',
+            //   month: 'short',
+            //   day: 'numeric',
+            // });
+            return (
+              <li class='grid grid-cols-[1fr] md:grid-cols-[1fr_auto] mb-3 md:gap-2 items-start'>
+                <div class='title'>
+                  <span>{goal.frontmatter.title}</span>
+                </div>
+                <div class='text-text-muted text-sm italic pt-1'>
+                  <span>{goal.frontmatter.description}</span>
+                </div>
+              </li>
+            );
+          })
+        }
+      </ul>
+    </section>
+    <!-- <section class='mt-14'>
       <ul>
         {
           sortedPosts.map((post) => {
-            const formattedDate = new Date(
-              post.frontmatter.date
-            ).toLocaleDateString("en-us", {
-              year: "numeric",
-              month: "short",
-              day: "numeric",
+            const formattedDate = new Date(post.frontmatter.date).toLocaleDateString('en-us', {
+              year: 'numeric',
+              month: 'short',
+              day: 'numeric',
             });
             return (
-              <li class="grid grid-cols-[1fr] md:grid-cols-[1fr_auto] mb-3 md:gap-2 items-start">
-                <div class="title">
+              <li class='grid grid-cols-[1fr] md:grid-cols-[1fr_auto] mb-3 md:gap-2 items-start'>
+                <div class='title'>
                   {post.frontmatter.external ? (
-                    <a
-                      href={post.frontmatter.url}
-                      target="_blank"
-                      class="unset hover:text-text-link"
-                    >
+                    <a href={post.frontmatter.url} target='_blank' class='unset hover:text-text-link'>
                       <span>{post.frontmatter.title}</span>
                       <span>
-                        <i class="ml-1 mr-1 text-[12px] pb-2 fa-solid fa-up-right-from-square pt-1" />
+                        <i class='ml-1 mr-1 text-[12px] pb-2 fa-solid fa-up-right-from-square pt-1' />
                       </span>
                     </a>
                   ) : (
-                    <a
-                      href={`/blog/${post.slug}`}
-                      class="unset hover:text-text-link"
-                    >
+                    <a href={`/blog/${post.slug}`} class='unset hover:text-text-link'>
                       {post.frontmatter.title}
                     </a>
                   )}
                 </div>
-                <div class="text-text-muted text-sm italic">
-                  <time datetime={post.frontmatter.date.toISOString()}>
-                    {formattedDate}
-                  </time>
+                <div class='text-text-muted text-sm italic'>
+                  <time datetime={post.frontmatter.date.toISOString()}>{formattedDate}</time>
                 </div>
               </li>
             );
           })
         }
       </ul>
-    </section>
+    </section> -->
   </Fragment>
 </PageLayout>
