--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -11,6 +11,6 @@
       </span> -->
       <span class='text-black'> Sean Tan</span>
     </h1>
-    <p class='text-xl pb-4'>Web Developer. Community. Hobbyist.</p>
+    <p class='text-xl pb-4'>The Singaporean Indie Hacker.</p>
   </div>
 </section>
