--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -11,6 +11,6 @@
       </span> -->
       <span class='text-black'> Sean Tan</span>
     </h1>
-    <p class='text-xl pb-4'>Singaporean Indie Hacker. Web Developer. Magic the Gathering Player.</p>
+    <p class='text-xl pb-4'>Singaporean Indie Hacker. Community Builder. Web Developer.</p>
   </div>
 </section>
