--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,13 @@
 ---
 ---
 
-<footer class="text-sm leading-[1.75] mt-4">
+<footer class='leading-[1.75] text-xs mt-4'>
   <div>
     <a
-      class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#f57111] to-[#f79605] hover:after:bg-gradient-to-r hover:after:from-[#f57111] hover:after:to-[#f79605]"
-      href={"https://drive.google.com/file/d/1hoXWBoQNiWV5EajMBOFeqMvYHuOUf_H4/view?usp=sharing"}
-      target="_blank"
-    >
-      Resume.</a
+      class='unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#f57111] to-[#f79605] hover:after:bg-gradient-to-r hover:after:from-[#f57111] hover:after:to-[#f79605]'
+      href={'https://www.linkedin.com/in/seantanyurong/'}
+      target='_blank'>
+      Message me on LinkedIn.</a
     >
   </div>
 </footer>
@@ -36,7 +35,7 @@
     left: 0;
     right: 0;
     bottom: -2px;
-    content: "";
+    content: '';
     height: 2px;
     position: absolute;
     transform: translateZ(0) scaleX(0);
