--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -3,7 +3,7 @@
 
 <section class='mb-8'>
   <div class='mb-4'>
-    <h1 class='font-extrabold text-5xl md:text-6xl tracking-tight pt-4 pb-2 overflow-hidden'>
+    <h1 class='font-extrabold text-3xl md:text-4xl tracking-tight pt-4 pb-2 overflow-hidden'>
       <!-- <span
         class="bg-gradient-to-br from-[#fb923c] via-[#f97316] to-[#ea580c] dark:from-primary-main dark:via-primary-main dark:to-primary-main bg-clip-text text-transparent"
       >
@@ -11,6 +11,6 @@
       </span> -->
       <span class='text-black'> Sean Tan</span>
     </h1>
-    <p class='text-xl pb-4'>Singaporean Indie Hacker. Community Builder. Web Developer.</p>
+    <p class='text-md pb-4'>Singaporean Indie Hacker. Web Developer. Side Quester.</p>
   </div>
 </section>
