--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -1,18 +1,18 @@
 ---
-/* 
+/*
   This layout is used in pages that render markdoc content
   - pages/blog/[slug].astro
 */
 
 // Import the global.css file here so that it is included on
-import "../styles/global.css";
+import '../styles/global.css';
 
-import GoogleFont from "./GoogleFont.astro";
-import FontAwesome from "./FontAwesome.astro";
-import ThemeScript from "./ThemeScript.astro";
-import Favicon from "./Favicon.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import GoogleFont from './GoogleFont.astro';
+import FontAwesome from './FontAwesome.astro';
+import ThemeScript from './ThemeScript.astro';
+import Favicon from './Favicon.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
 export interface Props {
   title: string;
@@ -20,49 +20,52 @@ export interface Props {
 }
 
 const { title, date } = Astro.props;
-const formattedDate = new Date(date).toLocaleDateString("en-us", {
-  year: "numeric",
-  month: "short",
-  day: "numeric",
+const formattedDate = new Date(date).toLocaleDateString('en-us', {
+  year: 'numeric',
+  month: 'short',
+  day: 'numeric',
 });
 ---
 
 <!DOCTYPE html>
-<html class="theme-sleek" lang="en">
+<html class='theme-sleek' lang='en'>
   <head>
     <!-- Global Metadata -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="generator" content="Blogster" />
+    <meta charset='utf-8' />
+    <meta name='viewport' content='width=device-width,initial-scale=1' />
+    <meta name='generator' content='Blogster' />
     <Favicon />
-    <slot name="meta" />
+    <slot name='meta' />
     <GoogleFont />
     <ThemeScript />
     <FontAwesome />
   </head>
 
-  <body class="min-h-screen max-w-3xl mx-auto px-6 sm:px-8">
+  <body class='min-h-screen max-w-3xl mx-auto px-6 sm:px-8'>
     <!-- <Header /> -->
-    <main id="main">
-      <section class="blog-post prose max-w-none prose-sleek">
-        <h1 class="m-0 mb-[0.25em]">{title}</h1>
-        <time class="block mb-[2em] text-text-muted">{formattedDate}</time>
-        <slot name="content" />
+    <main id='main'>
+      <section class='blog-post prose max-w-none prose-sleek'>
+        <h1 class='m-0 mb-[0.25em] text-2xl'>{title}</h1>
+        <time class='block mb-[2em] text-text-muted text-xs'>{formattedDate}</time>
+        <slot name='content' />
       </section>
     </main>
     <Footer />
-    <style>
+    <style is:inline>
       body {
         display: grid;
         grid-template-areas:
-          "header"
-          "main"
-          "footer";
+          'header'
+          'main'
+          'footer';
         grid-template-rows: 3rem minmax(0, 1fr) 5rem;
         grid-template-columns: minmax(0, 1fr);
       }
       main {
         grid-area: main;
+      }
+      article {
+        font-size: 12px;
       }
     </style>
   </body>
