--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-/* 
+/*
     Tailwind colors listed here: https://tailwindcss.com/docs/customizing-colors
-    
+
     Why colors are written in rgb format (255 255 255) instead of hex (#ffffff)
-    https://tailwindcss.com/docs/customizing-colors#using-css-variables 
+    https://tailwindcss.com/docs/customizing-colors#using-css-variables
 */
 @layer base {
   /* light theme */
@@ -75,9 +75,9 @@
   }
 
   :root {
-    font-family: theme("fontFamily.body");
-    background-color: theme("colors.bg.body");
-    color: theme("colors.text.body");
+    font-family: theme('fontFamily.body');
+    background-color: theme('colors.bg.body');
+    color: theme('colors.text.body');
     /* base font-size 1px larger for better visibility */
     font-size: 1.0625em;
     line-height: 1.75;
@@ -90,7 +90,7 @@
   h4,
   h5,
   h6 {
-    font-family: theme("fontFamily.heading");
+    font-family: theme('fontFamily.heading');
   }
 }
 
@@ -98,42 +98,38 @@
   /* ------ GLOBAL STYLES - START ------ */
   strong {
     font-weight: 600;
-    color: theme("colors.text.bold");
+    color: theme('colors.text.bold');
   }
 
   mark {
-    background-color: theme("colors.bg.selection");
-    color: theme("colors.text.selection");
+    background-color: theme('colors.bg.selection');
+    color: theme('colors.text.selection');
   }
 
-  /* 
-        if you want an anchor tag to not have this style, 
-        just add a class `unset` to it. 
+  /*
+        if you want an anchor tag to not have this style,
+        just add a class `unset` to it.
     */
   a:not(.unset) {
     text-decoration: none;
     background-repeat: no-repeat;
     background-size: 100% 1.5px;
     background-position: 0 100%;
-    background-image: linear-gradient(
-      to right,
-      theme("colors.text.link"),
-      theme("colors.text.link")
-    );
+    background-image: linear-gradient(to right, theme('colors.text.link'), theme('colors.text.link'));
   }
 
   a:not(.unset):hover {
-    color: theme("colors.text.link");
+    color: theme('colors.text.link');
   }
 
   code:not(pre code):not(.unset) {
-    background-color: theme("colors.bg.code");
-    color: theme("colors.text.code");
+    background-color: theme('colors.bg.code');
+    color: theme('colors.text.code');
     padding: 0.125rem 0.25rem;
     border-radius: 0.25rem;
     font-size: 0.875em;
     font-weight: 600;
-    border: 1px solid theme("colors.border.code");
+    border: 1px solid theme('colors.border.code');
     margin-bottom: 1.25em;
   }
 
@@ -142,40 +138,40 @@
     border-color: rgb(var(--color-border-code) / 0.15);
   }
 
-  ul:not(.unset):not(:where([class~="prose"] *)) {
+  ul:not(.unset):not(:where([class~='prose'] *)) {
     padding-left: 0;
     list-style: none;
   }
 
-  ul:not(:where([class~="prose"] *)) > li {
+  ul:not(:where([class~='prose'] *)) > li {
     position: relative;
     padding-left: 1.375rem;
   }
 
-  ul:not(.unset):not(:where([class~="prose"] *)) > li::before {
+  ul:not(.unset):not(:where([class~='prose'] *)) > li::before {
     position: absolute;
     left: 0;
-    content: "●";
+    content: '●';
     color: rgb(var(--color-text-muted));
   }
 
-  ol:not(.unset):not(:where([class~="prose"] *)) {
+  ol:not(.unset):not(:where([class~='prose'] *)) {
     padding-left: 1.125rem;
   }
 
-  ol:not(.unset):not(:where([class~="prose"] *)) > li::marker {
+  ol:not(.unset):not(:where([class~='prose'] *)) > li::marker {
     color: rgb(var(--color-text-muted));
   }
 
-  ul:not(.unset):not(:where([class~="prose"] *)) > li,
-  ol:not(.unset):not(:where([class~="prose"] *)) > li {
+  ul:not(.unset):not(:where([class~='prose'] *)) > li,
+  ol:not(.unset):not(:where([class~='prose'] *)) > li {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
   }
 
   ::selection {
-    background: theme("colors.bg.selection");
-    color: theme("colors.text.selection");
+    background: theme('colors.bg.selection');
+    color: theme('colors.text.selection');
   }
 
   /* ------ GLOBAL STYLES - END ------ */
@@ -195,17 +191,13 @@
     left: 0;
     right: 0;
     bottom: -3px;
-    content: "";
+    content: '';
     height: 2px;
     position: absolute;
     transform: translateZ(0) scaleX(0);
     transform-origin: left center;
     transition: all 0.15s ease-in-out;
-    background-image: linear-gradient(
-      to right,
-      theme("colors.text.link"),
-      theme("colors.text.link")
-    );
+    background-image: linear-gradient(to right, theme('colors.text.link'), theme('colors.text.link'));
   }
 
   .animated-link.show:after {
